--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-
-DATABASE_URL="postgresql://postgres:postgres@172.19.0.2:5432/atlantico?schema=public"
+DATABASE_URL="postgresql://postgres:password@localhost:5500/atlantico?schema=public"
 
 
 
