--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "firebase": "^9.8.3",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^4.4.0",
     "yup": "^0.32.11"
   },
