--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "nodemon src/serve.js",
     "build": "prisma generate",
-    "start": "node src/serve.js"
+    "start": "node src/serve.js",
+    "swagger-autogen": "node swagger.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.16",
-    "prisma": "^3.14.0"
+    "prisma": "^3.14.0",
+    "swagger-autogen": "^2.21.3"
   }
 }
