--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "express-paginate": "^1.0.2",
     "firebase": "^9.8.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
